.metals/.reports/metals/r_scala-toplevel-mtags_1687974761058
id: file://<WORKSPACE>/server/src/main/scala/com/bmmedia/playground/cookbook.scala:[527..533) in Input.VirtualFile("file://<WORKSPACE>/server/src/main/scala/com/bmmedia/playground/cookbook.scala", "package com.bmmedia.playground

trait Printable[A] {
  def format(value: A): String
}

object PrintableInstances {
  implicit val stringPrintable: Printable[String] = new Printable[String] {
    def format(value: String): String = value
  }
  implicit val intPrintable: Printable[Int] = new Printable[Int] {
    def format(value: Int): String = value.toString
  }
}

import PrintableInstances._

object Printer {
  def print[A](value: A)(implicit p: Printable[A]): Unit = {
    println(p.format(value))
  }
}

implicit class 

object playground {
  def main(args: Array[String]): Unit = {
    println("Hello, world!")

    Printer.print("Hello")
    Printer.print(123)
  }
}
")
file://<WORKSPACE>/server/src/main/scala/com/bmmedia/playground/cookbook.scala:26: error: expected identifier; obtained object
object playground {
^